Added Travis tests on all databases and migrated Jersey to latest version (#354)
Tests on:
* Oracle 12.2
* PostgreSQL 9.6 & 10
* MariaDB 10.0 & 10.3
* MySQL 5.7
* HSQLDB (already present)
* DB2 10.5

Tests allowed to discover a few regressions in database support which are also corrected here: wrong timezone handling in MySQL, failed transaction issue with pgsql, better "sequence" handling in MySQL.

Also, an issue with connection within the web application had us upgrade Jetty and Jersey to their latest version, with quite a few impacts (and it was not needed in the end, but was kept as it should have been done quickly anyway).