@@ -14,31 +14,8 @@
 	<description>Test suite for the JQM engine + service</description>
 
 	<properties>
-		<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+		<argLine>-Xms256m -Xmx1024m -XX:MaxMetaspaceSize=512m</argLine>
 	</properties>
-
-	<profiles>
-		<!-- The WS client is not really compatible with newer Java versions due 
-			to old Jersey. For now, skip WS tests. -->
-		<profile>
-			<id>noTests</id>
-			<activation>
-				<jdk>[1.9,20)</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${surefire.version}</version>
-						<configuration>
-							<skipTests>true</skipTests>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 	<dependencies>
 		<!-- The very goal of this artifact is to run tests with the other API 
@@ -61,6 +38,7 @@
 			<artifactId>jqm-api-client-jersey</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
 		<!-- needed by war -->
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -103,13 +81,23 @@
 								<artifactItem>
 									<groupId>org.postgresql</groupId>
 									<artifactId>postgresql</artifactId>
-									<version>42.1.1.jre6</version>
+									<version>${postgresql.client.version}</version>
 								</artifactItem>
 								<artifactItem>
 									<groupId>mysql</groupId>
 									<artifactId>mysql-connector-java</artifactId>
-									<version>5.1.41</version>
+									<version>${mysql.client.version}</version>
 								</artifactItem>
+                                <artifactItem>
+									<groupId>org.mariadb.jdbc</groupId>
+									<artifactId>mariadb-java-client</artifactId>
+									<version>${mariadb.client.version}</version>
+								</artifactItem>
+                                <dependency>
+                                    <groupId>com.ibm.db2</groupId>
+                                    <artifactId>jcc</artifactId>
+                                    <version>${db2.client.version}</version>
+                                </dependency>
 								<artifactItem>
 									<groupId>com.h2database</groupId>
 									<artifactId>h2</artifactId>
@@ -182,4 +170,61 @@
 			</plugin>
 		</plugins>
 	</build>
+
+    <profiles>
+        <profile>
+            <id>oracle</id>
+            <activation>
+                <property>
+                    <name>env.DB</name>
+                    <value>oracle</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>maven.oracle.com</id>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <url>https://maven.oracle.com</url>
+                    <layout>default</layout>
+                </repository>
+            </repositories>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.8</version>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>copy3</id>
+                                <phase>process-test-classes</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>com.oracle.jdbc</groupId>
+                                            <artifactId>ojdbc8</artifactId>
+                                            <version>${oracle.client.version}</version>
+                                        </artifactItem>
+                                    </artifactItems>
+                                    <outputDirectory>${project.basedir}/ext</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
