@@ -13,7 +13,7 @@
 	<description>Test suite for the JQM engine + service</description>
 
 	<properties>
-		<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+		<argLine>-Xms256m -Xmx1024m -XX:MaxMetaspaceSize=512m</argLine>
 	</properties>
 
 	<build>
@@ -43,13 +43,23 @@
 								<artifactItem>
 									<groupId>org.postgresql</groupId>
 									<artifactId>postgresql</artifactId>
-									<version>42.1.1.jre6</version>
+									<version>${postgresql.client.version}</version>
 								</artifactItem>
 								<artifactItem>
 									<groupId>mysql</groupId>
 									<artifactId>mysql-connector-java</artifactId>
-									<version>5.1.41</version>
+									<version>${mysql.client.version}</version>
 								</artifactItem>
+                                <artifactItem>
+									<groupId>org.mariadb.jdbc</groupId>
+									<artifactId>mariadb-java-client</artifactId>
+									<version>${mariadb.client.version}</version>
+								</artifactItem>
+                                <dependency>
+                                    <groupId>com.ibm.db2</groupId>
+                                    <artifactId>jcc</artifactId>
+                                    <version>${db2.client.version}</version>
+                                </dependency>
 								<artifactItem>
 									<groupId>com.h2database</groupId>
 									<artifactId>h2</artifactId>
@@ -205,9 +215,64 @@
 		</plugins>
 	</build>
 
+    <profiles>
+        <profile>
+            <id>oracle</id>
+            <activation>
+                <property>
+                    <name>env.DB</name>
+                    <value>oracle</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>maven.oracle.com</id>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <url>https://maven.oracle.com</url>
+                    <layout>default</layout>
+                </repository>
+            </repositories>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.8</version>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>copy3</id>
+                                <phase>process-test-classes</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>com.oracle.jdbc</groupId>
+                                            <artifactId>ojdbc8</artifactId>
+                                            <version>${oracle.client.version}</version>
+                                        </artifactItem>
+                                    </artifactItems>
+                                    <outputDirectory>${project.basedir}/ext</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+
 	<dependencies>
-
-
 		<!-- This project mostly tests the service JQM distribution -->
 		<dependency>
 			<groupId>com.enioka.jqm</groupId>
@@ -232,16 +297,6 @@
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>${hsqldb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.1.1.jre6</version>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.11</version>
 		</dependency>
 
 	</dependencies>
