@@ -21,7 +21,7 @@
                 <version>${surefire.version}</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
-                    <argLine>-XX:MaxPermSize=128m -Xms150m -Xmx256m</argLine>
+                    <argLine>-XX:MaxMetaspaceSize=128m -Xms150m -Xmx256m</argLine>
                     <systemProperties>
                         <property>
                             <name>mavenVersion</name>
